@@ -1,3 +1,9 @@
+2002-02-27  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+
+	* Source/GSString.m ([GSMutableString -substringWithRange:]): 
+	create a new string which size is the range length, not the original
+	string's length.
+
 2002-02-27  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/gdomap.c: Removed obsolete code for shrinking data structures.
